# docs/swagger.json
@@ -827,14 +827,10 @@
         "dtos.BuyTicketDTO": {
             "type": "object",
             "required": [
-                "car_id",
                 "parking_place_id",
                 "tax_id"
             ],
             "properties": {
-                "car_id": {
-                    "type": "integer"
-                },
                 "parking_place_id": {
                     "type": "integer"
                 },
@@ -1152,12 +1148,6 @@
         "views.TicketDetailView": {
             "type": "object",
             "properties": {
-                "car": {
-                    "$ref": "#/definitions/views.CarDetailView"
-                },
-                "car_id": {
-                    "type": "integer"
-                },
                 "client": {
                     "$ref": "#/definitions/views.ClientView"
                 },
